--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           name: coverage
           path: coverage
       - name: Show coverage in comments
-        uses: ziishaned/jest-reporter-action@v0.0.1
+        uses: ziishaned/jest-reporter-action@latest
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           test-command: 'yarn test -- --coverage'
