--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.2.3",
+    "@types/styled-components": "^5.1.9",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -66,8 +68,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.2.1",
     "stylelint": "^13.13.0",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.4.0",
     "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^4.1.0"
   }
 }
