--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.2.1",
+    "chartjs-plugin-datalabels": "^1.0.0",
+    "date-fns": "^2.21.1",
+    "destyle.css": "^2.0.2",
     "emotion-reset": "^3.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
