--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
         env:
           SKIP_PREFLIGHT_CHECK: true
       - name: Run the tests and generate coverage report
-        run: yarn test -- --coverage
+        run: yarn test --coverage
+        env:
+          SKIP_PREFLIGHT_CHECK: true
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
