--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.21.1",
     "destyle.css": "^2.0.2",
     "emotion-reset": "^3.0.0",
+    "msw": "^0.28.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
